{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 412,
  "lineage": "58ff58c4-febb-24d3-3dea-9d9cddda5d2e",
  "resources": [
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "agw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 20,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [
                  "yazeed-be-app-yazeed.azurewebsites.net"
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendAddressPools/yazeed-vnet-yazeed-beap-be",
                "ip_addresses": [],
                "name": "yazeed-vnet-yazeed-beap-be"
              },
              {
                "fqdns": [
                  "yazeed-fe-app-yazeed.azurewebsites.net"
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendAddressPools/yazeed-vnet-yazeed-beap-fe",
                "ip_addresses": [],
                "name": "yazeed-vnet-yazeed-beap-fe"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendHttpSettingsCollection/yazeed-vnet-yazeed-be-htst-be",
                "name": "yazeed-vnet-yazeed-be-htst-be",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 8080,
                "probe_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/probes/yazeed-vnet-yazeed-be-probe",
                "probe_name": "yazeed-vnet-yazeed-be-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendHttpSettingsCollection/yazeed-vnet-yazeed-be-htst-fe",
                "name": "yazeed-vnet-yazeed-be-htst-fe",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/probes/yazeed-vnet-yazeed-fe-probe",
                "probe_name": "yazeed-vnet-yazeed-fe-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/frontendIPConfigurations/yazeed-vnet-yazeed-feip",
                "name": "yazeed-vnet-yazeed-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/publicIPAddresses/yazeed-agw-pip-yazeed",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/frontendPorts/yazeed-vnet-yazeed-feport",
                "name": "yazeed-vnet-yazeed-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/gatewayIPConfigurations/agw-ip-config",
                "name": "agw-ip-config",
                "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/agw-subnet-public1"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/frontendIPConfigurations/yazeed-vnet-yazeed-feip",
                "frontend_ip_configuration_name": "yazeed-vnet-yazeed-feip",
                "frontend_port_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/frontendPorts/yazeed-vnet-yazeed-feport",
                "frontend_port_name": "yazeed-vnet-yazeed-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/httpListeners/yazeed-vnet-yazeed-httplstn",
                "name": "yazeed-vnet-yazeed-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed",
            "identity": [],
            "location": "centralindia",
            "name": "yazeed-agw-yazeed",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/probes/yazeed-vnet-yazeed-be-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "yazeed-vnet-yazeed-be-probe",
                "path": "/actuator/health",
                "pick_host_name_from_backend_http_settings": true,
                "port": 80,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/probes/yazeed-vnet-yazeed-fe-probe",
                "interval": 60,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "yazeed-vnet-yazeed-fe-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 80,
                "protocol": "Http",
                "timeout": 60,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/httpListeners/yazeed-vnet-yazeed-httplstn",
                "http_listener_name": "yazeed-vnet-yazeed-httplstn",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/requestRoutingRules/yazeed-vnet-yazeed-rqrt-be",
                "name": "yazeed-vnet-yazeed-rqrt-be",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/urlPathMaps/yazeed-vnet-yazeed-path-map",
                "url_path_map_name": "yazeed-vnet-yazeed-path-map"
              }
            ],
            "resource_group_name": "RG-Yazeed-project2",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendAddressPools/yazeed-vnet-yazeed-beap-fe",
                "default_backend_address_pool_name": "yazeed-vnet-yazeed-beap-fe",
                "default_backend_http_settings_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendHttpSettingsCollection/yazeed-vnet-yazeed-be-htst-fe",
                "default_backend_http_settings_name": "yazeed-vnet-yazeed-be-htst-fe",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/urlPathMaps/yazeed-vnet-yazeed-path-map",
                "name": "yazeed-vnet-yazeed-path-map",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendAddressPools/yazeed-vnet-yazeed-beap-fe",
                    "backend_address_pool_name": "yazeed-vnet-yazeed-beap-fe",
                    "backend_http_settings_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendHttpSettingsCollection/yazeed-vnet-yazeed-be-htst-fe",
                    "backend_http_settings_name": "yazeed-vnet-yazeed-be-htst-fe",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/urlPathMaps/yazeed-vnet-yazeed-path-map/pathRules/redir-to-fe",
                    "name": "redir-to-fe",
                    "paths": [
                      "/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendAddressPools/yazeed-vnet-yazeed-beap-be",
                    "backend_address_pool_name": "yazeed-vnet-yazeed-beap-be",
                    "backend_http_settings_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/backendHttpSettingsCollection/yazeed-vnet-yazeed-be-htst-be",
                    "backend_http_settings_name": "yazeed-vnet-yazeed-be-htst-be",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/applicationGateways/yazeed-agw-yazeed/urlPathMaps/yazeed-vnet-yazeed-path-map/pathRules/redir-to-be",
                    "name": "redir-to-be",
                    "paths": [
                      "/api/*",
                      "/actuator/health"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.0"
              }
            ],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "yazeed-agw-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "module.appgw.azurerm_public_ip.agw_pip",
            "module.appservice.azurerm_linux_web_app.be_app",
            "module.appservice.azurerm_linux_web_app.fe_app",
            "module.appservice.azurerm_service_plan.service_plan_be",
            "module.appservice.azurerm_service_plan.service_plan_fe",
            "module.db.azurerm_mssql_database.products_db",
            "module.db.azurerm_mssql_server.products_db_server",
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.agw_subnet",
            "module.subnets.azurerm_subnet.be_subnet",
            "module.subnets.azurerm_subnet.fe_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "agw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/publicIPAddresses/yazeed-agw-pip-yazeed",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.155.113",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "yazeed-agw-pip-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_agw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-agw-nsg-yazeed",
            "location": "centralindia",
            "name": "yazeed-agw-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "65200-65535"
                ],
                "direction": "Inbound",
                "name": "allow-agw-management",
                "priority": 102,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443"
                ],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "yazeed-agw-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-be-nsg-yazeed",
            "location": "centralindia",
            "name": "yazeed-be-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "65200-65535"
                ],
                "direction": "Inbound",
                "name": "allow-agw-management",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1433"
                ],
                "direction": "Outbound",
                "name": "allow-db",
                "priority": 106,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.50.0/24",
                  "10.0.8.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443"
                ],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.50.0/24",
                  "10.0.8.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-fe-port",
                "priority": 104,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.50.0/24",
                  "10.0.8.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.50.0/24",
                  "10.0.8.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080"
                ],
                "direction": "Inbound",
                "name": "allow-api-port",
                "priority": 102,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.50.0/24",
                  "10.0.8.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "yazeed-be-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.agw_subnet",
            "module.subnets.azurerm_subnet.fe_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-db-nsg-yazeed",
            "location": "centralindia",
            "name": "yazeed-db-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "65200-65535"
                ],
                "direction": "Inbound",
                "name": "allow-agw-management",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1433"
                ],
                "direction": "Inbound",
                "name": "allow-azure-sql",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.20.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "yazeed-db-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.be_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-fe-nsg-yazeed",
            "location": "centralindia",
            "name": "yazeed-fe-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "65200-65535"
                ],
                "direction": "Inbound",
                "name": "allow-agw-management",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443"
                ],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.20.0/24",
                  "10.0.50.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.20.0/24",
                  "10.0.50.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080"
                ],
                "direction": "Inbound",
                "name": "allow-bee-port",
                "priority": 102,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.50.0/24",
                  "10.0.8.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "yazeed-fe-nsg-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.agw_subnet",
            "module.subnets.azurerm_subnet.be_subnet",
            "module.subnets.azurerm_subnet.fe_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "agw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/agw-subnet-public1",
            "network_security_group_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-agw-nsg-yazeed",
            "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/agw-subnet-public1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg_agw",
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.agw_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "be_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/be-subnet-private1",
            "network_security_group_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-be-nsg-yazeed",
            "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/be-subnet-private1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg_be",
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.agw_subnet",
            "module.subnets.azurerm_subnet.be_subnet",
            "module.subnets.azurerm_subnet.fe_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/db-subnet-private1",
            "network_security_group_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-db-nsg-yazeed",
            "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/db-subnet-private1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg_db",
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.be_subnet",
            "module.subnets.azurerm_subnet.db_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "fe_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/fe-subnet-private1",
            "network_security_group_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-fe-nsg-yazeed",
            "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/fe-subnet-private1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg_fe",
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.subnets.azurerm_subnet.agw_subnet",
            "module.subnets.azurerm_subnet.be_subnet",
            "module.subnets.azurerm_subnet.fe_subnet",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "agw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.50.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/agw-subnet-public1",
            "name": "agw-subnet-public1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Yazeed-project2",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "agw-subnet-public1",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "be_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.20.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "Microsoft.Web.serverFarms",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/be-subnet-private1",
            "name": "be-subnet-private1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Yazeed-project2",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Web"
            ],
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "be-subnet-private1",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/db-subnet-private1",
            "name": "db-subnet-private1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Yazeed-project2",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "db-subnet-private1",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.8.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "Microsoft.Web.serverFarms",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/fe-subnet-private1",
            "name": "fe-subnet-private1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Yazeed-project2",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "fe-subnet-private1",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/pe-subnet-private1",
            "name": "pe-subnet-private1",
            "private_endpoint_network_policies": "Enabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Yazeed-project2",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pe-subnet-private1",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "yazeed-vnet-yazeed"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg",
            "module.vnets.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e08ec211-a691-405c-bca7-0e1250395392",
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed",
            "location": "centralindia",
            "name": "yazeed-vnet-yazeed",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "RG-Yazeed-project2",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/pe-subnet-private1",
                "name": "pe-subnet-private1",
                "private_endpoint_network_policies": "Enabled",
                "private_link_service_network_policies_enabled": true,
                "service_endpoints": [
                  "Microsoft.Web"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/db-subnet-private1",
                "name": "db-subnet-private1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-db-nsg-yazeed",
                "service_endpoints": [
                  "Microsoft.Sql"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.20.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "Microsoft.Web.serverFarms",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/action"
                        ],
                        "name": "Microsoft.Web/serverFarms"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/be-subnet-private1",
                "name": "be-subnet-private1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-be-nsg-yazeed",
                "service_endpoints": [
                  "Microsoft.Sql",
                  "Microsoft.Web"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.50.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/agw-subnet-public1",
                "name": "agw-subnet-public1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-agw-nsg-yazeed",
                "service_endpoints": [
                  "Microsoft.Web"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.8.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "Microsoft.Web.serverFarms",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/action"
                        ],
                        "name": "Microsoft.Web/serverFarms"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/virtualNetworks/yazeed-vnet-yazeed/subnets/fe-subnet-private1",
                "name": "fe-subnet-private1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/RG-Yazeed-project2/providers/Microsoft.Network/networkSecurityGroups/yazeed-fe-nsg-yazeed",
                "service_endpoints": [
                  "Microsoft.Web"
                ]
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "yazeed-vnet-yazeed",
            "resource_group_name": "RG-Yazeed-project2",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "module.resourcegroups.azurerm_resource_group.main-rg"
          ]
        }
      ]
    }
  ]
}